[metadata]
name = pytensils
description = A Python package that provides general utility functions for managing configuration, user-logging, directories and data-types as well as a basic run-time profiler.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Eleff
url = https://github.com/thomaseleff/pytensils
project_urls =
    Issues = https://github.com/thomaseleff/pytensils/issues
    Releases = https://github.com/thomaseleff/pytensils/releases
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = pytensils
python_requires = >=3.7.1
install_requires =
    pandas>=1.3.5
    tabulate==0.9.0
    typing_extensions==4.7.1